# libre-ephemeris

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cbindgen.toml  package-lock.json  plan.md
.github/workflows/: ci.yml
.opencode/goals/: state.json  state.json.ledger.jsonl
benches/: calc.rs
docs/: migration_guide.md
examples/: planet_positions.c  planet_positions.rs  riseset.c
include/: le_ephemeris.h
src/: aberration.rs  ayanamsa.rs  bias.rs  calc.rs  calendar.rs  constants.rs  context.rs  deflection.rs  delta_t.rs  eclipse.rs  events.rs  fixstar.rs  heliacal.rs  houses.rs  lib.rs  phenomena.rs  precession.rs  refraction.rs  riseset.rs  topocentric.rs  transform.rs  types.rs
src/analytical/: elpmpp02.rs  mod.rs  moon.rs  planets.rs  series.rs  vsop2013.rs
src/data/: leap_second.rs  mod.rs
src/fixstar/: data.rs
src/jpl/: interpolate.rs  mod.rs  reader.rs
src/nutation/: iau2000a.rs  iau2000b.rs  mod.rs
tests/: comprehensive.rs  regression.rs  test_jpl_synthetic.rs  test_vsop2013.rs  test_vsop2013_multi_planet.rs  validate_accuracy.rs
tests/regression_data/: ayanamsa.csv  delta_t.csv  fixed_stars.csv  houses.csv  planet_phenomena.csv  planet_polar.csv  planet_positions_bary.csv  planet_positions_date.csv  planet_positions_ecl_date.csv  planet_positions_ecliptic.csv  planet_positions_helio.csv  planet_positions_j2000.csv  planet_radec.csv  (+2 more)
tools/: check_cleanroom.sh  download_elpmpp02.sh  download_vsop2013.sh  gen_all_oracles.py  gen_regression_data.py  gen_regression_data.sh  validate_accuracy.py
